--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-  <style>
-  meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+ meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<style>
   @import url(https://fonts.googleapis.com/css?family=Varela+Round);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
 
@@ -276,6 +276,8 @@ a{color:$linkColor; text-decoration:none;}
 @keyframes skill_5 {from {width:0%;}to {width:70%;}}  
 @keyframes skill_6 {from {width:0%;}to {width:70%;}}
 @keyframes skill_7 {from {width:0%;}to {width:70%;}}
+	</style>
+
 <stylemeta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <div class="resume-wrapper">
 	<section class="profile section-padding">
