Fix time formatting for community manager experience
Updated the time format for the community manager position.

--- a/index.html
+++ b/index.html
@@ -358,8 +358,8 @@ a{color:$linkColor; text-decoration:none;}
       
       <div class="experience-wrapper">
       	<div class="company-wrapper clearfix">
-      		<div class="Stage community manager- Drancy">Company name</div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
-          <div class="time">Mars 2024-Mai 2025</div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
+      		<div class="Stage community manager-Drancy">Company name</div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
+          <div class="time">Mars2024-Mai2025</div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
       	</div>
         
         <div class="job-wrapper clearfix">
