--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ a{color:$linkColor; text-decoration:none;}
       
       <div class="experience-wrapper">
       	<div class="company-wrapper clearfix">
-      		<div class="Stage community manager-Drancy">Company name</div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
+      		<div class="Stage-community-manager-Drancy">Pain et toi</div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
           <div class="time">Mars2024-Mai2025</div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
       	</div>
         
