--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@ a{color:$linkColor; text-decoration:none;}
         <div class="job-wrapper clearfix">
         	<div class="experience-title">Front End Developer </div> <!-- JOB TITLE  -->
           <div class="company-description">
-          	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce a elit facilisis, adipiscing leo in, dignissim magna.</p>  <!-- JOB DESCRIPTION  -->
+          	<p>Chargé de communication dans une boulangerie a drancy dans le cadre de mon stge de L3</p>  <!-- JOB DESCRIPTION  -->
           </div>
         </div>
         
