--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ a{color:$linkColor; text-decoration:none;}
          <div class="clearfix"></div>
  </div>
       <div class="name-wrapper">
-        <h1>John <br/>Anderson</h1><!-- YOUR NAME AND LAST NAME  -->
+        <h1>Haithem <br/>Touileb</h1><!-- YOUR NAME AND LAST NAME  -->
       </div>
       <div class="clearfix"></div>
       <div class="contact-info clearfix">
@@ -328,10 +328,9 @@ a{color:$linkColor; text-decoration:none;}
       		<li>Home</li>
       	</ul>
         <ul class="list-content ">
-        	<li>+34 123 456 789</li> <!-- YOUR PHONE NUMBER  -->
-        	<li>j.anderson@gmail.com</li> <!-- YOUR EMAIL -->
-        	<li><a href="#">janderson.com</a></li> <!-- YOUR WEBSITE  -->
-        	<li>Los Angeles, CA</li> <!-- YOUR STATE AND COUNTRY  -->
+        	<li>+33 744 942 195</li> <!-- YOUR PHONE NUMBER  -->
+        	<li>touilebstor2018@gmail.com</li> <!-- YOUR EMAIL -->
+        	<li>Paris, France</li> <!-- YOUR STATE AND COUNTRY  -->
         </ul>
       </div>
       <div class="contact-presentation"> <!-- YOUR PRESENTATION RESUME  -->
