--- a/index.html
+++ b/index.html
@@ -324,7 +324,6 @@ a{color:$linkColor; text-decoration:none;}
       	<ul class="list-titles">
       		<li>Call</li>
       		<li>Mail</li>
-      		<li>Web</li>
       		<li>Home</li>
       	</ul>
         <ul class="list-content ">
@@ -334,18 +333,18 @@ a{color:$linkColor; text-decoration:none;}
         </ul>
       </div>
       <div class="contact-presentation"> <!-- YOUR PRESENTATION RESUME  -->
-      	<p><span class="bold">Lorem</span> ipsum dolor sit amet, consectetur adipiscing elit. Vivamus euismod congue nisi, nec consequat quam. In consectetur faucibus turpis eget laoreet. Sed nec imperdiet purus. </p>
+      	<p><span class="bold">Lorem</span>Je m'appelle TOUILEB Haithem, j'ai 23ans et j'habite a paris, je suis étudiant M1 en numérique, et j'aimerai travailler dans ce domaine. </p>
       </div>
       <div class="contact-social clearfix">
       	<ul class="list-titles">
       		<li>Twitter</li>
-      		<li>Dribbble</li>
-      		<li>Codepen</li>
+      		<li>Instagram</li>
+      		<li>Tiktok</li>
       	</ul>
         <ul class="list-content"> <!-- REMEMBER TO PUT THE URL ON THE HREF TAG  -->
-      		<li><a href="">@janderson</a></li> <!-- YOUR TWITTER USER  -->
-      		<li><a href="">janderson</a></li> <!-- YOUR DRIBBBLE USER  -->
-      		<li><a href="">janderson</a></li> <!-- YOUR BEHANCE USER  -->
+      		<li><a href="">@BordeauxHaithem</a></li> <!-- YOUR TWITTER USER  -->
+      		<li><a href="">_willy_93</a></li> <!-- YOUR Instagram USER  -->
+      		<li><a href="">@willy__93</a></li> <!-- YOUR Tiktok USER  -->
       	</ul>
       </div>
 		</div>
