Fix HTML formatting in index.html

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ a{color:$linkColor; text-decoration:none;}
         </ul>
       </div>
       <div class="contact-presentation"> <!-- YOUR PRESENTATION RESUME  -->
-      	<p><span class="bold">Lorem</span>Je m'appelle TOUILEB Haithem, j'ai 23ans et j'habite a paris, je suis étudiant M1 en numérique, et j'aimerai travailler dans ce domaine. </p>
+      	<p><span class="bold"></span>Je m'appelle TOUILEB Haithem, j'ai 23ans et j'habite a paris, je suis étudiant M1 en numérique, et j'aimerai travailler dans ce domaine. </p>
       </div>
       <div class="contact-social clearfix">
       	<ul class="list-titles">
@@ -361,8 +361,7 @@ a{color:$linkColor; text-decoration:none;}
       	</div>
          <div class="job-wrapper clearfix">
         	<div class="experience-title">Front End Developer </div> <!-- JOB TITLE  -->
-          <div class="company-description">
-          	<p>Chargé de communication dans une boulangerie a drancy dans le cadre de mon stage de L3</p>  <!-- JOB DESCRIPTION  -->
+          <div class="company-description">Chargé de communication dans une boulangerie a drancy dans le cadre de mon stage de L3</p>  <!-- JOB DESCRIPTION  -->
           </div>
         </div>
         
