--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <style>
   @import url(https://fonts.googleapis.com/css?family=Varela+Round);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
+	<link rel“stylesheet” href=“style.css”>
 
 $profileBg:#fff;
 $skillsBg:#3d3e42;
