--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 
 <style>
+	<link rel"stylesheet" href="style.css">
   @import url(https://fonts.googleapis.com/css?family=Varela+Round);
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
-<link rel"stylesheet" href="style.css">
-
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700)
 $profileBg:#fff;
 $skillsBg:#3d3e42;
 $profileColor:#9099a0;
