--- a/index.html
+++ b/index.html
@@ -1,339 +1,202 @@
 
 <style>
-  @import url(https://fonts.googleapis.com/css?family=Varela+Round);
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700)
-$profileBg:#fff;
-$skillsBg:#3d3e42;
-$profileColor:#9099a0;
-$skillsColor:#9099a0; 
-$linkColor:#66cc99;
-$boldColor:#4a4e51;
-$time:0.6s;
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&family=Open+Sans:wght@300;400;600;700&display=swap');
 
- 
-@mixin breakpoint($point) {
-  @if $point == papa-bear {
-    @media (max-width: 1500px)  { @content; }
-  }
-  @if $point == mama-bear {
-    @media (max-width: 1200px)  { @content; }
-  }
-  @if $point == brother-bear {
-    @media (max-width: 850px)  { @content; }
-  }
-  @else if $point == baby-bear {
-    @media (max-width: 450px)  { @content; }
-  }
-}
-
-*, *::after, *::before {
-  box-sizing:border-box;
-}
-
-html,body {
-  height: 100%;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   font-family: 'Open Sans', sans-serif;
-  font-size:16px;
-  line-height:1.5em;
+  background: #f5f6fa;
+  color: #4a4e51;
+  font-size: 16px;
+  line-height: 1.6;
 }
-a{color:$linkColor; text-decoration:none;}
-.clearfix::after, .clearfix::before {
-  content: " ";
-	display: table;
-}
-.clearfix::after{clear:both;}
-.bold {color:$boldColor; font-weight:400;}
 
+a {
+  color: #66cc99;
+  text-decoration: none;
+  transition: 0.3s;
+}
+a:hover {
+  color: #4a4e51;
+}
+
+/* === STRUCTURE PRINCIPALE === */
 .resume-wrapper {
-  position:relative;
-  text-align:center;
-  height:100%;
-}
-
-.container {
-  min-height:600px;
-} 
-
-.profile {
-  background:$profileBg;
-  width:40%;
-  float:left;
-  color:$profileColor;
-  @include breakpoint(brother-bear) { width: 100%; }
-  .name-wrapper {
-    float:left;
-    width:60%;
-  }
-  h1 {
-    font-size:2.5em;
-    text-align:left;
-    font-family: 'Varela Round', sans-serif;
-    color:$boldColor;
-    text-transform:uppercase;
-    line-height:1em;
-    padding-top:40px; 
-    @include breakpoint(mama-bear) {
-       padding-top:20px;
-    }
-    @include breakpoint(baby-bear) {
-      font-size:1.8em;  
-      padding-top:20px;
-    } 
-  }
-  li {
-      margin-bottom:10px;
-    }
-  .picture-resume-wrapper {
-    width:40%;
-    display:block;
-    float:left;
-    @include breakpoint(mama-bear) {
-       width:100%;
-    }
-  }
-  .picture-resume {
-    width:220px;
-    height:220px;
-    background-size:cover;
-    border-radius:50%;
-    margin-right:0px;
-    display:table;
-    position:relative;
-    vertical-align:middle;
-    span {
-        display:table-cell;
-        vertical-align: middle;
-        position:relative;
-        margin:0 auto;
-        z-index:10;
-       text-align:center
-    }
-    img {
-      border-radius:50%;
-      width:130px;
-      @include breakpoint(papa-bear) {
-        width:80px;
-      }
-      @include breakpoint(mama-bear) {
-        width:120px;
-        height:120px;
-      }
-    }
-    @include breakpoint(papa-bear) {
-      width:150px;
-      height:150px;
-    }
-    @include breakpoint(mama-bear) {
-      width:200px;
-      height:200px;
-    }
-     @include breakpoint(baby-bear) { width:180px;height:180px; } 
-  }
-  .contact-info{
-    margin-top:100px;
-    font-weight:300;
-    @include breakpoint(mama-bear) {margin-top:70px; } 
-    @include breakpoint(baby-bear) { margin-top:50px; } 
-  }
-  .list-titles {
-    float:left;
-    text-align:left;
-    font-weight:600;
-    width:40%;
-    color:$boldColor;
-  }
-  .list-content{
-    float:left;
-    width:60%;
-    text-align:left;
-    font-weight:300;
-  }
-  .contact-presentation {
-    text-align:left;
-    font-weight:300;
-    margin-top:100px;
-    margin-bottom:100px;
-    @include breakpoint(mama-bear) {margin-top:70px;margin-bottom:70px; } 
-    @include breakpoint(brother-bear) {margin-top:50px;margin-bottom:50px; } 
-    
-  }
-  svg {
-    width:100%;
-    position:absolute;
-    top:0;
-    left:0;
-    //display:none;
-  }
-
-  .st0, .st1 {
-    fill:#66cc99;
-  }
-
-}
-.experience {
-  background:$skillsBg;
-  width:60%;
-  float:left;
-  position:relative;
-  color:$skillsColor;
-  font-weight:300;
-  min-height:100%;
-  min-height:100vh;
-  @include breakpoint(brother-bear) { width: 100%; } 
-  h3.experience-title {
-    color:$linkColor;
-    text-align:left;
-    text-transform:uppercase;
-    font-size:1.2em;
-    margin-bottom:20px;
-    font-weight:400;
-  }
-  .company-wrapper {
-    width:30%;
-    float:left;
-    text-align:left;
-    padding-right:5%;
-    margin-bottom:60px;
-    @include breakpoint(baby-bear) {width:100%; margin-bottom:20px;} 
-  }
-  .job-wrapper {
-    width:70%;
-    float:left;
-    text-align:left;
-    padding-right:5%;
-    margin-bottom:60px;
-    @include breakpoint(baby-bear) {width:100%;margin-bottom:40px;} 
-  }
-  .experience-title {
-      color:white;
-      margin-bottom:15px;;
-    }
-}
-
-.section-padding {
- padding:60px 60px 40px 40px;
- @include breakpoint(brother-bear) { padding:80px 15% 40px 10%; }
- @include breakpoint(baby-bear) { padding:40px 10% 20px 5%; }
-}
-
-.section-wrapper {
-  width:50%;
-  float:left;
-  text-align:left;
-  color:$skillsColor;
-  font-weight:300;
-  margin-bottom:20px;
-  @include breakpoint(baby-bear) {width:100%;}
-  &:nth-child(3){ 
-    padding-right:8%;
-  }
-  h3.section-title {
-    color:$linkColor;
-    text-align:left;
-    text-transform:uppercase;
-    font-size:1.2em;
-    margin-bottom:20px;
-    font-weight:400;
-  }
-  .skill-percentage {
-    margin-bottom:10px;
-    position:relative;
-    &::after {
-      content:"";
-      width:100%;
-      height:6px;
-      background:$boldColor;
-      display:block;
-      margin-top:3px;
-    }
-    &::before{
-      content:"";
-      height:6px;
-      background:$linkColor;
-      position:absolute;
-      margin-top:3px;
-      bottom:0;
-    }
-    &:nth-child(1)::before {width:80%;animation: skill_1 $time ease;}
-    &:nth-child(2)::before {width:90%; animation: skill_2 $time ease;} 
-    &:nth-child(3)::before {width:50%;animation: skill_3 $time ease;}
-    &:nth-child(4)::before {width:60%;animation: skill_4 $time ease;}
-    &:nth-child(5)::before {width:70%;animation: skill_5 $time ease;}
-    &:nth-child(6)::before {width:70%;animation: skill_6 $time ease;}
-    &:nth-child(7)::before {width:70%;animation: skill_6 $time ease;}
-  }
-  
-}
-
-@keyframes skill_1 {from {width:0%;}to {width:80%;}}
-@keyframes skill_2 {from {width:0%;}to {width:90%;}}
-@keyframes skill_3 {from {width:0%;}to {width:50%;}}
-@keyframes skill_4 {from {width:0%;}to {width:60%;}}
-@keyframes skill_5 {from {width:0%;}to {width:70%;}}  
-@keyframes skill_6 {from {width:0%;}to {width:70%;}}
-@keyframes skill_7 {from {width:0%;}to {width:70%;}}
-
-
-	body {
-  font-family: 'Segoe UI', Arial, sans-serif;
-  background-color: #f5f7fa;
-  margin: 0;
-  padding: 0;
-  color: #333;
-}
-
-.container {
   display: flex;
-  max-width: 1000px;
-  margin: 40px auto;
-  background: white;
-  border-radius: 10px;
-  overflow: hidden;
-  box-shadow: 0 0 15px rgba(0,0,0,0.1);
+  flex-wrap: wrap;
+  min-height: 100vh;
 }
 
-/* Colonne gauche */
-.sidebar {
-  background-color: #2f3b52;
-  color: white;
-  width: 30%;
-  padding: 30px;
-}
-
-.sidebar h3 {
-  border-bottom: 1px solid #fff3;
-  padding-bottom: 5px;
-  margin-top: 20px;
-}
-
-.profile img {
-  width: 100px;
-  border-radius: 50%;
-  display: block;
-  margin: 0 auto 10px;
-}
-
-/* Colonne droite */
-.content {
-  width: 70%;
+/* === PARTIE GAUCHE : PROFIL === */
+.profile {
+  background: #fff;
+  color: #4a4e51;
+  width: 40%;
   padding: 40px;
+  text-align: center;
+  box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.content h3 {
-  color: #007acc;
-  margin-top: 0;
-}
-
-.job {
+.picture-resume img {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: 5px solid #66cc99;
   margin-bottom: 20px;
 }
 
-.job h4 {
-  margin-bottom: 5px;
-  color: #333
+.profile h1 {
+  font-family: 'Varela Round', sans-serif;
+  font-size: 2.3em;
+  color: #2f3640;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+.profile .contact-info {
+  text-align: left;
+  margin-top: 40px;
+}
+
+.profile .list-titles {
+  font-weight: 700;
+  float: left;
+  width: 40%;
+  color: #2f3640;
+}
+.profile .list-content {
+  float: left;
+  width: 60%;
+  color: #4a4e51;
+}
+
+.contact-presentation {
+  margin: 40px 0;
+  text-align: justify;
+  font-weight: 400;
+}
+
+.contact-social {
+  margin-top: 30px;
+  text-align: left;
+}
+.contact-social ul {
+  list-style: none;
+}
+.contact-social a:hover {
+  color: #2f3640;
+  font-weight: 600;
+}
+
+/* === PARTIE DROITE : EXPERIENCE === */
+.experience {
+  background: #3d3e42;
+  color: #dcdde1;
+  width: 60%;
+  padding: 60px;
+}
+
+.experience-title {
+  color: #66cc99;
+  font-size: 1.3em;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+.company-wrapper,
+.job-wrapper {
+  margin-bottom: 40px;
+}
+
+.company-wrapper .time {
+  color: #9099a0;
+  font-size: 0.9em;
+}
+
+.job-wrapper .experience-title {
+  color: #fff;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.company-description p {
+  margin-top: 5px;
+}
+
+/* === SKILLS === */
+.section-wrapper {
+  margin-top: 40px;
+}
+
+.section-title {
+  color: #66cc99;
+  font-size: 1.2em;
+  text-transform: uppercase;
+  margin-bottom: 15px;
+}
+
+.skill-percentage {
+  margin-bottom: 10px;
+  position: relative;
+}
+
+.skill-percentage::after {
+  content: "";
+  width: 100%;
+  height: 6px;
+  background: #4a4e51;
+  display: block;
+  margin-top: 3px;
+  border-radius: 3px;
+}
+
+.skill-percentage::before {
+  content: "";
+  position: absolute;
+  height: 6px;
+  background: #66cc99;
+  margin-top: 3px;
+  bottom: 0;
+  border-radius: 3px;
+  animation: grow 0.8s ease forwards;
+}
+
+.skill-percentage:nth-child(1)::before { width: 90%; }
+.skill-percentage:nth-child(2)::before { width: 80%; }
+.skill-percentage:nth-child(3)::before { width: 75%; }
+.skill-percentage:nth-child(4)::before { width: 85%; }
+.skill-percentage:nth-child(5)::before { width: 80%; }
+.skill-percentage:nth-child(6)::before { width: 70%; }
+
+@keyframes grow {
+  from { width: 0; }
+}
+
+/* === HOBBIES === */
+.section-wrapper p {
+  margin-bottom: 10px;
+  color: #dcdde1;
+}
+
+/* === RESPONSIVE DESIGN === */
+@media (max-width: 992px) {
+  .resume-wrapper {
+    flex-direction: column;
+  }
+  .profile, .experience {
+    width: 100%;
+    box-shadow: none;
+  }
+  .profile {
+    border-bottom: 5px solid #66cc99;
+  }
+  .experience {
+
 	</style>
 <link rel"stylesheet" href="style.css">
 <stylemeta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
