Fix HTML structure and update company name

--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@ a:hover {
         	<li>+33 744 942 195</li> <!-- YOUR PHONE NUMBER  -->
         	<li>touilebstor2018@gmail.com</li> <!-- YOUR EMAIL -->
         	<li>Paris, France</li> <!-- YOUR STATE AND COUNTRY  -->
-        </ul>
-		  <br>
+        <br>
+		</ul>
       </div>
       <div class="contact-presentation"> <!-- YOUR PRESENTATION RESUME  -->
       	<p><span class="bold"></span>Je m'appelle TOUILEB Haithem, j'ai 23ans et j'habite a paris, je suis étudiant M1 en numérique, et j'aimerai travailler dans ce domaine. </p>
@@ -300,7 +300,7 @@ a:hover {
         </div>
         
         <div class="company-wrapper clearfix">
-      		<div class="experience-title">CWonder food</div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
+      		<div class="experience-title">Wonder food</div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
           <div class="time">Mars 2023- Novembre 2023</div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
       	</div> 
         
