--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ a:hover {
 		<div class="container">
 			<div class="picture-resume-wrapper">
         <div class="picture-resume">
-        <span><img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="" /></span>
+        <span><img src="IMG_2307.jpg" alt="" /></span>
         <svg version="1.1" viewBox="0 0 350 350">
   
   <defs>
