Fix typos and formatting in index.html

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ a:hover {
 		</ul>
       </div>
       <div class="contact-presentation"> <!-- YOUR PRESENTATION RESUME  -->
-      	<p><span class="bold"></span>Je m'appelle TOUILEB Haithem, j'ai 23ans et j'habite a paris, je suis étudiant M1 en numérique, et j'aimerai travailler dans ce domaine. </p>
+      	<p><span class="bold"></span>Je m'appelle TOUILEB Haithem, j'ai 23 ans et j'habite a paris, je suis étudiant M1 en numérique, et j'aimerai travailler dans ce domaine. </p>
       </div>
       <div class="contact-social clearfix">
       	<ul class="list-titles">
@@ -279,7 +279,7 @@ a:hover {
          <div class="job-wrapper clearfix">
         	<div class="experience-title">Chargé de communication </div> <!-- JOB TITLE  -->
           <div class="company-description">
-          	<p>Chargé de communication de la créperie woonder food, je gérait leur instagram et tiktok, en créant du ccontenu vidéo et photo.</p>   <!-- JOB DESCRIPTION  -->
+          	<p>Chargé de communication de la créperie woonder food, je gérais leur instagram et tiktok, en créant du ccontenu vidéo et photo.</p>   <!-- JOB DESCRIPTION  -->
           </div>
         </div>
         
@@ -290,7 +290,7 @@ a:hover {
         	<ul>
         		<li class="skill-percentage">HTML</li>
         		<li class="skill-percentage">Maitrise des réseaux sociaux.</li>
-        		<li class="skill-percentage">Canva,CapCUT</li>
+        		<li class="skill-percentage">Canva, CapCUT</li>
         		<li class="skill-percentage">Créativité et esprit d'équipe</li>
         		<li class="skill-percentage">Sens de l'organisation</li>
         		<li class="skill-percentage">Photoshop</li>
